--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,21 @@
 {
-  "name": "Nexo",
+  "name": "Nexo - Interactivo",
   "short_name": "Nexo",
+  "description": "Una experiencia interactiva con efectos visuales y multilenguaje",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
+  "orientation": "any",
+  "background_color": "#f5e6d3",
+  "theme_color": "#2E4052",
   "icons": [
     {
       "src": "/favicon.svg",
-      "sizes": "100x100",
-      "type": "image/svg+xml"
+      "sizes": "192x192",
+      "type": "image/svg+xml",
+      "purpose": "any maskable"
     }
-  ]
+  ],
+  "screenshots": [],
+  "categories": ["entertainment", "personalization"],
+  "prefer_related_applications": false
 }
